--- a/final.html
+++ b/final.html
@@ -25,6 +25,9 @@
 
         
         </section>
+         <h3>Appendix A</h3>
+              
+                    <p>The group approves this report for inclusion on the course website.</p>
 </body>
     <!--> remember to use the data file<-->
 </html>
