--- a/final.html
+++ b/final.html
@@ -13,10 +13,10 @@
         <hr>
         <section>
             <h2> Introduction</h2>>
-                <p> For our final project, we are proposing to build a 2 or 3 axis robot arm with 
+                <p> For our final project, we built a 2 axis robot arm with 
                     a capacitive sensor on the final member, which will allow the robot to detect 
-                    a person near the robot. When there is an object detected, the arm will either 
-                    stop or slow down depending on the measured capacitance.  The purpose of this 
+                    a person near the robot. When there is an object detected, the arm will 
+                    stop depending on the measured capacitance.  The purpose of this 
                     type of sensor is to allow robots and humans to work in the environment safely. 
                     Functionally, this product will allow a user to move around the robot arm with 
                     potentiometers to complete a task as desired. In addition to that, the user can 
