--- a/final.html
+++ b/final.html
@@ -12,6 +12,11 @@
     <h1>Capacitive Sensing Robot Arm</h1>
     <h2>Ximeng Zhang(xz737), Matt Daniel(mrd89)</h2>
     <a href="#Introduction-header">Introduction</a>
+    <a href="#HighLevelDesign-header">High Level Design</a>
+    <a href="#HardwareDesign-header">Hardware Design</a>
+    <a href="#SoftwareDesign-header"> Software Design</a>
+    <a href="#DesignResults-header"> Design Results</a>
+    <a href="#Conclusion-header"> Conclusion</a>
     <a href="#Appendix-header">Appendix</a>
         <hr>
         <section>
@@ -27,6 +32,37 @@
 
         
         </section>
+        <section>
+         <h2 id="HighLevelDesign-header"> High level Design </h2>
+        </section>
+        <hr>
+        <section>
+         <h2 id="HardwareDesign-header"> Hardware Design </h2>
+         <h4> 3d printed parts</h4>
+         <p>Our physical design consists of two servo motors with 180 degrees of rotation connected together
+             to make a simple arm with two degrees of freedom. The base motor is mounted with a 3D printed part
+             onto a piece of 2x6 wood which serves as a base to keep the arm in place. Connected to the base servo
+             is another 3D printed mount which connects to the second servo motor. Finally, a final mount connects
+             the second servo to the arm which is simply a piece of carbon fiber tubing. Below is a diagram of the robot arm made.</p>
+          <p>Each of the pieces that were 3D printed were made using Autodesk Inventor. The design for this was to
+              be as simple and effective as possible while using minimal material.  The bottom piece has four slots
+              for wood screws to mount the piece to the wood base in addition to 2 5mm holes to place threaded heat
+              set inserts for M3 screws. Each part made has these slots which allows us to easily attach the pieces
+              to the motors and the carbon tube.</p>
+        </section>
+        <hr>
+        <section>
+         <h2 id="SoftwareDesign-header"> Software Design </h2>
+        </section>
+        <hr>
+        <section>
+         <h2 id="DesignResult-header"> Design Result </h2>
+        </section>
+        <hr>
+         <section>
+         <h2 id="Conclusion-header">Conclusion </h2>
+        </section>
+        <hr>
          <h3 id="Appendix-header">Appendix A</h3>
               
                     <p>The group approves this report for inclusion on the course website.</p>
