--- a/final.html
+++ b/final.html
@@ -65,7 +65,7 @@
         <hr>
          <h3 id="Appendix-header">Appendix A</h3>
               
-                    <p>The group approves this report for inclusion on the course website.</p>
+                    <p>The group approves this report for inclusion on the course website./n The group approves the video for inclusion on the course youtube channel./n</p>
 </body>
     <!-- remember to use the data file -->
 </html>
