--- a/final.html
+++ b/final.html
@@ -40,15 +40,21 @@
          <h2 id="HardwareDesign-header"> Hardware Design </h2>
          <h4> 3d printed parts</h4>
          <p>Our physical design consists of two servo motors with 180 degrees of rotation connected together
-             to make a simple arm with two degrees of freedom. The base motor is mounted with a 3D printed part
-             onto a piece of 2x6 wood which serves as a base to keep the arm in place. Connected to the base servo
-             is another 3D printed mount which connects to the second servo motor. Finally, a final mount connects
-             the second servo to the arm which is simply a piece of carbon fiber tubing. Below is a diagram of the robot arm made.</p>
+            <br> to make a simple arm with two degrees of freedom. The base motor is mounted with a 3D printed part
+             <br>onto a piece of 2x6 wood which serves as a base to keep the arm in place. Connected to the base servo
+             <br>is another 3D printed mount which connects to the second servo motor. Finally, a final mount connects
+             <br>the second servo to the arm which is simply a piece of carbon fiber tubing. Below is a diagram of the robot arm made.</p>
           <p>Each of the pieces that were 3D printed were made using Autodesk Inventor. The design for this was to
-              be as simple and effective as possible while using minimal material.  The bottom piece has four slots
-              for wood screws to mount the piece to the wood base in addition to 2 5mm holes to place threaded heat
-              set inserts for M3 screws. Each part made has these slots which allows us to easily attach the pieces
-              to the motors and the carbon tube.</p>
+              <br>be as simple and effective as possible while using minimal material.  The bottom piece has four slots
+              <br>for wood screws to mount the piece to the wood base in addition to 2 5mm holes to place threaded heat
+              <br>set inserts for M3 screws. Each part made has these slots which allows us to easily attach the pieces
+              <br>to the motors and the carbon tube.</p>
+           <h3>Hardware Components Overview</h3>
+           <h4>Prototyping Board</h4>
+            <p>In addition to the robot arm hardware, we also designed a simple soldered prototyping board 
+                <br>which allows us to easily connect and disconnect the PIC32, motors, and power supply. 
+                <br>Additionally, it made the control of the robot very clean and consistent without any 
+                <br>possible loose wires. </p>
         </section>
         <hr>
         <section>
@@ -65,7 +71,8 @@
         <hr>
          <h3 id="Appendix-header">Appendix A</h3>
               
-                    <p>The group approves this report for inclusion on the course website./n The group approves the video for inclusion on the course youtube channel./n</p>
+                    <p>The group approves this report for inclusion on the course website.
+                        <br>The group approves the video for inclusion on the course youtube channel.</p>
 </body>
     <!-- remember to use the data file -->
 </html>
