--- a/final.html
+++ b/final.html
@@ -62,7 +62,7 @@
         </section>
         <hr>
         <section>
-         <h2 id="DesignResult-header"> Design Result </h2>
+         <h2 id="DesignResults-header"> Design Result </h2>
         </section>
         <hr>
          <section>
