--- a/final.html
+++ b/final.html
@@ -69,10 +69,39 @@
          <h2 id="Conclusion-header">Conclusion </h2>
         </section>
         <hr>
-         <h3 id="Appendix-header">Appendix A</h3>
-              
+        <section>
+         <h2 id="Appendix-header"> Appendix </h2>
+         <h3>Appendix A</h3>    
                     <p>The group approves this report for inclusion on the course website.
                         <br>The group approves the video for inclusion on the course youtube channel.</p>
+         <h3>Appendix B</h3>
+         <h3>Appendix C</h3>
+         <h3>Appendix D</h3>
+            <p>
+            <table style="width:100%">
+  <tr>
+    <th>Parts name</th>
+    <th>Vendor </th>
+    <th>Number </th>
+    <th>Price </th>
+    <th>Total</th>
+  </tr>
+  <tr>
+    <td>Servo Motor</td>
+    <td>Matt</td>
+    <td>2</td>
+    <td>8</td>
+    <td>16</td>
+  </tr>
+  <tr>
+    <td>Eve</td>
+    <td>Jackson</td>
+    <td>94</td>
+  </tr>
+</table>
+            </p>
+         <h3>Appendix E</h3>
+        </section>
 </body>
     <!-- remember to use the data file -->
 </html>
